feat: local product images only, file picker + preview, Cloudinary disabled

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-﻿# ============================================
+# ============================================
 # Environment Variables Configuration
 # ============================================
 # Copy this file to .env and fill in your values
@@ -42,6 +42,13 @@ VITE_OAUTH_PORTAL_URL=
 # Only needed if using Forge API features
 BUILT_IN_FORGE_API_URL=
 BUILT_IN_FORGE_API_KEY=
+
+# ============================================
+# Cloudinary (รูปสินค้า - อัปโหลดไป Cloud)
+# ============================================
+# รูปแบบ: cloudinary://API_KEY:API_SECRET@CLOUD_NAME
+# คัดลอกจาก Cloudinary Dashboard > API Keys (หรือใช้แบบแยก CLOUD_NAME, API_KEY, API_SECRET ก็ได้)
+CLOUDINARY_URL=
 
 # ============================================
 # Server Configuration
